--- a/StudizPrototype/app/src/main/AndroidManifest.xml
+++ b/StudizPrototype/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.StudizPrototype">
-        <activity android:name=".books"></activity>
+        <activity android:name=".restaurant"></activity>
+        <activity android:name=".books" />
         <activity android:name=".bar" />
         <activity android:name=".categories" />
         <activity android:name=".Settings" />
