lavede login skærm med studiekort godkendelse. Gjorde så man kommer fra startskærmen til login når man åbner appen og efter login bliver man smidt til homepage1.

--- a/StudizPrototype/app/src/main/AndroidManifest.xml
+++ b/StudizPrototype/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.StudizPrototype">
         <activity android:name=".health"></activity>
+        <activity android:name=".loginScreen"/>
         <activity android:name=".sport" />
         <activity android:name=".beauty" />
         <activity android:name=".transport" />
